refactoring hot product
